--- a/Patterns/Patterns.csproj
+++ b/Patterns/Patterns.csproj
@@ -41,7 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Classes\FactoryMethod\FactoryMethod.cs" />
+    <Compile Include="Classes\AbstractFactory.cs" />
+    <Compile Include="Classes\FactoryMethod.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
