--- a/Patterns/Patterns.csproj
+++ b/Patterns/Patterns.csproj
@@ -42,7 +42,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Classes\AbstractFactory.cs" />
+    <Compile Include="Classes\Builder.cs" />
     <Compile Include="Classes\FactoryMethod.cs" />
+    <Compile Include="Classes\Prototype.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
