Ввел реализацию синглтона, без LAzy

--- a/Patterns/Patterns.csproj
+++ b/Patterns/Patterns.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Classes\Builder.cs" />
     <Compile Include="Classes\FactoryMethod.cs" />
     <Compile Include="Classes\Prototype.cs" />
+    <Compile Include="Classes\Singleton.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
